--- a/index.html
+++ b/index.html
@@ -8,42 +8,42 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <div class="container d-flex">
+    <div class="container d-flex rel">
         <div id="hd">
-            <h1><a href=""><img src="img/logo.png" alt="logo"></a></h1>
+            <h1><a href="#none"><img src="img/logo.png" alt="logo"></a></h1>
             <ul id="gnb ">
                 <li class="d1li ">
-                    <a href="" class="d1a d-block">축제소개</a>
+                    <a href="#none" class="d1a d-block">축제소개</a>
                     <ul class="d2ul ">
-                        <li><a href="">초대의 글</a></li>
-                        <li><a href="">축제개요</a></li>
-                        <li><a href="">축제연혁</a></li>
-                        <li><a href="">오시는길</a></li>
+                        <li><a href="#none">초대의 글</a></li>
+                        <li><a href="#none">축제개요</a></li>
+                        <li><a href="#none">축제연혁</a></li>
+                        <li><a href="#none">오시는길</a></li>
                     </ul>
                 </li>
                 <li class="d1li ">
-                    <a href="" class="d1a d-block">행사안내</a>
+                    <a href="#none" class="d1a d-block">행사안내</a>
                     <ul class="d2ul ">
-                        <li><a href="">셔틀버스안내</a></li>
-                        <li><a href="">행사안내</a></li>
-                        <li><a href="">행사일정</a></li>
-                        <li><a href="">소공연장</a></li>
+                        <li><a href="#none">셔틀버스안내</a></li>
+                        <li><a href="#none">행사안내</a></li>
+                        <li><a href="#none">행사일정</a></li>
+                        <li><a href="#none">소공연장</a></li>
                     </ul>
                 </li>
                 <li class="d1li ">
-                    <a href="" class="d1a d-block">홍보마당</a>
+                    <a href="#none" class="d1a d-block">홍보마당</a>
                     <ul class="d2ul ">
-                        <li><a href="">축제소식</a></li>
-                        <li><a href="">보도자료</a></li>
-                        <li><a href="">음식레시피</a></li>
+                        <li><a href="#none">축제소식</a></li>
+                        <li><a href="#none">보도자료</a></li>
+                        <li><a href="#none">음식레시피</a></li>
                     </ul>
                 </li>
                 <li class="d1li ">
-                    <a href="" class="d1a d-block">참여마당</a>
+                    <a href="#none" class="d1a d-block">참여마당</a>
                     <ul class="d2ul ">
-                        <li><a href="">참가후기</a></li>
-                        <li><a href="">연꽃갤러리</a></li>
-                        <li><a href="">포토갤러리</a></li>
+                        <li><a href="#none">참가후기</a></li>
+                        <li><a href="#none">연꽃갤러리</a></li>
+                        <li><a href="#none">포토갤러리</a></li>
                     </ul>
                 </li>
             </ul>
@@ -51,13 +51,64 @@
         <div class="right">
             <div id="slider" class="rel ofh h350">
                 <ul>
-                    <li class="abs show"><a href=""><img src="img/slide1.png" alt="슬라이더이미지1"></a></li>
-                    <li class="abs"><a href=""><img src="img/slide2.png" alt="슬라이더이미지2"></a></li>
-                    <li class="abs"><a href=""><img src="img/slide3.png" alt="슬라이더이미지3"></a></li>
+                    <li class="abs show"><a href="#none"><img src="img/slide1.png" alt="슬라이더이미지1"></a></li>
+                    <li class="abs"><a href="#none"><img src="img/slide2.png" alt="슬라이더이미지2"></a></li>
+                    <li class="abs"><a href="#none"><img src="img/slide3.png" alt="슬라이더이미지3"></a></li>
                 </ul>
             </div>
+            <div class="content d-flex h200">
+                <div class="notice">
+                    <h3>공지사항</h3>
+                    <ul >
+                        <li id="trigger"><a href="#none">공지사항내용입력공지사항내용입력공지사항내용입력</a><span>2022-03-24</span></li>
+                        <li><a href="#none">공지사항내용입력공지사항내용입력공지사항내용입력공지사항내용입력</a><span>2022-03-24</span></li>
+                        <li><a href="#none">공지사항내용입력공지사항내용입력공지사항내용입력</a><span>2022-03-25</span></li>
+                        <li><a href="#none">공지사항내용입력공지사항내용입력공지사항내용입력</a><span>2022-03-31</span></li>
+                    </ul>
+                </div>
+                <div class="gallery">
+                    <h3>갤러리</h3>
+                    <ul class="d-flex">
+                        <li><a href="#none"><img src="img/gal1.png" alt="갤러리1"></a></li>
+                        <li><a href="#none"><img src="img/gal2.png" alt="갤러리2"></a></li>
+                        <li><a href="#none"><img src="img/gal3.png" alt="갤러리3"></a></li>
+                    </ul>
+                </div>
+                <div class="link">
+                    <a href="#none"><img src="img/link.png" alt="링크이미지"></a>
+                </div>
+            </div>
+            <div id="ft" class="d-flex align-center h100">
+                <div class="copy ">
+                    <p>CopyRight &copy; 부여 가을 연꽃축제</p>
+                </div>
+                <div class="ftright ">
+                    <div class="sns">
+                        <ul class="d-flex justify-between">
+                            <li><a href="#none"><img src="img/sns1.png" alt=""></a></li>
+                            <li><a href="#none"><img src="img/sns2.png" alt=""></a></li>
+                            <li><a href="#none"><img src="img/sns3.png" alt=""></a></li>
+                        </ul>
+                    </div>
+                    <select  id="f_fam" class="familySite">
+                        <option value="family1"><a href="#none">패밀리사이트</a></option>
+                        <option value="family2"><a href="#none">네이버</a></option>
+                        <option value="family3"><a href="#none">다음</a></option>
+                        <option value="family4"><a href="#none">구글</a></option>
+                    </select>
+                </div>
+            </div>
+        </div>
+        <div class="modal d-none"></div>
+        <div class="popup abs d-none">
+            <h2>부여 가을연꽃축제 팝업제목</h2>
+            <p>팝업내용 입력</p>
+            <p>팝업내용 입력</p>
+            <p>팝업내용 입력</p>
+            <button>닫기</button>
         </div>
     </div>
+
     <script src="js/jquery.js"></script>
     <script src="js/slider.js"></script>
 </body>
