--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    
     <div class="container d-flex rel">
         <div id="hd">
             <h1><a href="#none"><img src="img/logo.png" alt="logo"></a></h1>
-            <ul id="gnb ">
+            <ul id="gnb">
                 <li class="d1li ">
                     <a href="#none" class="d1a d-block">축제소개</a>
                     <ul class="d2ul ">
@@ -47,6 +48,11 @@
                     </ul>
                 </li>
             </ul>
+            <p>
+                <a href="http://validator.kldp.org/check?uri=referer"
+                  onclick="this.href=this.href.replace(/referer$/,encodeURIComponent(document.URL))"><img
+                  src="//validator.kldp.org/w3cimgs/validate/html5-blue.png" alt="Valid HTML 5" height="15" width="80"></a>
+              </p>
         </div>
         <div class="right">
             <div id="slider" class="rel ofh h350">
@@ -91,10 +97,10 @@
                         </ul>
                     </div>
                     <select  id="f_fam" class="familySite">
-                        <option value="family1"><a href="#none">패밀리사이트</a></option>
-                        <option value="family2"><a href="#none">네이버</a></option>
-                        <option value="family3"><a href="#none">다음</a></option>
-                        <option value="family4"><a href="#none">구글</a></option>
+                        <option value="family1">패밀리사이트</option>
+                        <option value="family2">네이버</option>
+                        <option value="family3">다음</option>
+                        <option value="family4">구글</option>
                     </select>
                 </div>
             </div>
